Fix pre tag overlap on iphones

--- a/components/mdx/pre/pre.module.scss
+++ b/components/mdx/pre/pre.module.scss
@@ -1,18 +1,10 @@
 @import 'common';
 
-.wrapper {
-  overflow: auto;
-  width: 100%;
-  // max-width: 80rem;
-  // align-self: center;
-  // justify-self: center;
-  // grid-column: 1 / 4 !important;
-  // padding: 3.2rem;
-  margin: 4rem 0;
-}
 .pre[class*='language-'],
 .pre {
+  margin: 4rem 0;
   overflow-x: scroll;
+  overflow-y: hidden;
   font-size: 1.7rem;
   line-height: 1.7;
   width: 100%;
@@ -21,22 +13,21 @@
   align-self: center;
   justify-self: center;
   grid-column: 1 / 4 !important;
-  padding: 3.2rem;
+  padding: 0 3.2rem;
   background: #f5f6f9;
   border: none;
   color: #2a2a2a;
   tab-size: 2;
-  // min-width: 100%;
   hyphens: none;
   direction: ltr;
   text-align: left;
   white-space: pre;
-  // overflow-wrap: break-word;
-  // word-spacing: normal;
-  // word-break: keep-all;
-  // overflow: hidden;
   scrollbar-width: thin;
   scrollbar-color: rgba(0, 0, 0, 0.1) transparent;
+  margin: 4rem 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 
   &::-webkit-scrollbar {
     height: 8px;
@@ -53,5 +44,8 @@
 
   @include mediaquery('lg') {
     border-radius: 1.8rem;
+    height: auto;
+    padding: 3.2rem;
+    display: block;
   }
 }
